Update Fulfillment groups in QE page

--- a/quality/quality-engineering/fulfillment-growth-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/fulfillment-growth-qe-team/index.html.md.erb
@@ -28,10 +28,12 @@ Quality Engineering Manager: Vincy Wilson
 | S.No 	| Stage       	| Group              | SET Counterpart                       |
 |------	|---------------|--------------------|---------------------------------------|
 | 1    	| [Fulfillment] | [Purchase]         | Chloe Liu                             |
-| 2    	| [Fulfillment] | [License]          | Dan Davison                           |
+| 2    	| [Fulfillment] | [Provision]        | Dan Davison                           |
 | 3    	| [Fulfillment] | [Utilization]      | Edgars Brālītis                       | 
 | 4     | [Fulfillment] | [Fulfillment Platform] | TBH                               |
 | 5     | [Fulfillment] | [Billing and Subscription Management] | TBH                |
+| 6     | [Fulfillment] | [Commerce Integrations] | TBH                              |
+| 7     | [Fulfillment] | [Fulfillment Admin Tooling] | TBH                          |
 
 [Growth section]
 
@@ -70,10 +72,12 @@ Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/
 [Fulfillment section]: /handbook/product/categories/#fulfillment-section
 [Fulfillment]: /handbook/product/categories/#fulfillment-stage
 [Purchase]: /handbook/product/categories/#purchase-group
-[License]: /handbook/product/categories/#license-group
+[Provision]: /handbook/product/categories/#provision-group
 [Utilization]: /handbook/product/categories/#utilization-group
 [Fulfillment Platform]: /handbook/product/categories/#fulfillment-platform-group
 [Billing and Subscription Management]: /handbook/product/categories/#billing-and-subscription-management-group
+[Commerce Integrations]: /handbook/product/categories/#commerce-integrations-group
+[Fulfillment Admin Tooling]: /handbook/product/categories/#fulfillment-admin-tooling-group
 [Growth section]: /handbook/product/categories/#growth-section
 [Growth]: /handbook/product/categories/#growth-stage
 [Activation]: /handbook/product/categories/#activation-group
