Updated page and word count stats

--- a/product/ux/technical-writing/index.html.md.erb
+++ b/product/ux/technical-writing/index.html.md.erb
@@ -242,10 +242,13 @@ The number of pages in the four primary repositories (GitLab, Omnibus, Charts, a
 
 | Date          | # of pages |
 |---------------|------------|
+| May 2020      | 1,165      |
 | Jan 2022      | 1,562      |
 | June 2022     | 1,633      |
 | Sept 2022     | 1,785      |
 | Dec 2022      | 1,840      |
+
+**Change between May 2020 and Dec 2022:** 675 more pages (a 58% increase)
 
 The number of words in these repositories:
 
@@ -256,6 +259,10 @@ The number of words in these repositories:
 | June 2022     | 2,166,052  |
 | Oct 2022      | 2,271,350  |
 | Dec 2022      | 2,397,335  |
+
+**Change between May 2020 and Dec 2022:** 1,206,964 more words 
+
+The word count has more than doubled in this timeframe.
 
 ## Technical Writer PTO
 
