Update GitLab the Product naming guidelines to reference Product Principles

--- a/product/gitlab-the-product/index.html.md.erb
+++ b/product/gitlab-the-product/index.html.md.erb
@@ -256,6 +256,7 @@ Naming new features or [renaming existing features](https://docs.gitlab.com/ee/d
 - It should not overlap with any other existing concepts in GitLab.
 - It should have as few words as possible (so people won't use a shortened name).
 - If you remove words from the name, it is still unique (helps to give it as few words as possible).
+- We should also give products descriptive, not distinctive, names, and use prepositions when referring to third-party products and services in names. See our [Product Principles] (https://about.gitlab.com/handbook/product/product-principles/#product-and-feature-naming-guidelines) for more information.
 
 #### Process
 
@@ -276,7 +277,7 @@ Some valid but not exclusive reasons are:
 
 When renaming features follow the process [to rename a category](/handbook/product/categories/#changing-category-name) starting with an MR to change the name in [`data/features.yml`](https://gitlab.com/gitlab-com/www-gitlab-com/blob/master/data/features.yml). Request review by the Product Director and Engineering Director of your Section for approval. Optionally, add a comment including your technical writer, engineering manager, and designer for transparency.
 
-When renmaing a feature other items to consider are updates to documentation, blogs, direction pages and competitive information.
+When renaming a feature other items to consider are updates to documentation, blogs, direction pages and competitive information.
 
 ### Using What's New to communicate updates to users 
 
