Rename Code Review categories

--- a/development/dev/create/code-review/index.html.md.erb
+++ b/development/dev/create/code-review/index.html.md.erb
@@ -33,10 +33,8 @@ The following people are permanent members of the Create:Code Review Group:
 
 The Code Review group is responsible for the following product categories:
 
-- [Code Review](/direction/create/code_review/)
-- [Editor Extension](https://about.gitlab.com/direction/create/editor_extension/)
-  - [GitLab VS Code Extension](https://gitlab.com/gitlab-org/gitlab-vscode-extension)
-  - [Gitlab CLI](http://gitlab.com/gitlab-org/cli)
+- [Code Review](/direction/create/code_review_workflow/)
+- [Gitlab CLI](/direction/create/gitlab_cli/)
 
 ### Category performance indicators
 
