Add GitLab upgrades initial test coverage docs

--- a/quality/roadmap/index.html.md.erb
+++ b/quality/roadmap/index.html.md.erb
@@ -222,5 +222,5 @@ Work that helps in validating the release process.
 ### Review apps
 1. [Improve review apps reliability](https://gitlab.com/groups/gitlab-org/-/epics/605)
 1. Make review app a mandatory testing gate with smoke tests.
-1. Shift QA tests to completely run against review apps, only orchestrated test run in the package-and-qa job.
+1. Shift QA tests to completely run against review apps, only orchestrated test run in the package-and-test job.
 1. [Improve review apps usefulness, add testdata into review apps to ease testability[https://gitlab.com/groups/gitlab-org/-/epics/606].
