--- a/finance/timekeeping/index.html.md.erb
+++ b/finance/timekeeping/index.html.md.erb
@@ -25,7 +25,7 @@ Team members who are based in the United States and classified as exempt are pai
 
 The salary of a team member classified as exempt will not be reduced when the team member works part of a week and misses part of a week due to service as a juror, witness or in the military, though deductions may be made to offset amounts a team member receives as jury or witness fees, or for military pay. It is GitLab's policy to comply with the salary basis requirements of the [Fair Labor Standards Act (FLSA)](https://www.dol.gov/agencies/whd/flsa) and applicable state law. GitLab prohibits any deductions from pay that violate the FLSA or applicable state law.
 
-If a team member classified as exempt believes that an improper deduction has been made to their salary, the team member should immediately report this information to teammemberrelations@gitlab.com. Reports of improper deductions will be promptly investigated. If it is determined that an improper deduction as occurred, the team member will be promptly reimbursed for any improper deduction made.
+If a team member classified as exempt believes that an improper deduction has been made to their salary, the team member should immediately report this information to `uspayroll@gitlab.com`. Reports of improper deductions will be promptly investigated. If it is determined that an improper deduction as occurred, the team member will be promptly reimbursed for any improper deduction made.
 
 ## Non-Exempt Team Members
 
@@ -129,7 +129,7 @@ As a fully distributed company, any team member classified as a non-exempt emplo
 
 * Team members **must track their time** and clock out for meal periods in their Time and Attendance portal in ADP.
 * Team members who work between 5 and 6 hours a day are entitled to and are required to take an unpaid meal break of at least 30 minutes.
-* A meal break is defined as any break over 30 minutes in which a team member is relieved of all duties. There is no requirement to eat a meal, but historically this is how it has been framed in the historical 9-5 office-based culture. Team members are free to spend their meal break in any manner they so choose, at their discretion, except that they must be completely relieved of all work duties during that time period. 
+* A **meal break** is defined as any break over 30 minutes in which a team member is relieved of all duties. There is no requirement to eat a meal, but historically this is how it has been framed in the historical 9-5 office-based culture. Team members are free to spend their meal break in any manner they so choose, at their discretion, except that they must be completely relieved of all work duties during that time period. 
 * Team members who work more than 6 hours a day are entitled to and required to take an unpaid meal break of at least 45 minutes.
 * The meal period must begin no later than the end of a team member's fourth hour of work.
 * A second unpaid meal break of at least 30 minutes is due after 10 hours total worked in a single day.
@@ -141,22 +141,49 @@ As a fully distributed company, any team member classified as a non-exempt emplo
 * Team members **do not** log their rest breaks in their Time and Attendance portal in ADP.
 * Team members who work at least 2 hours are entitled to one paid rest break of at least 10 minutes, and additional paid 10-minute rest breaks for every 3.5 hours worked thereafter.
 * Team members may not work more than 3 continuous hours without a rest break.
+* A **rest break** is defined as a short period of time, usually 20 minutes or less, where the team member is relieved of all duties.
 
 # ADP Time & Attendance Portal
 
 GitLab, Inc. and GitLab Federal LLC use ADP Essential Time & Attendance to report the hours worked and time off for non-exempt team members in the US. ADP Essential Time & Attendance is included within ADP Workforce Now, which is accessed through Okta SSO. Review additional questions in our [Frequently Asked Questions](/handbook/finance/timekeeping/frequently-asked-questions/) page.
 
-## Timecard Reporting
+## Time Card Reporting
 
-**All time worked and time off should be recorded promptly in your timesheet in ADP Essential Time & Attendance**. Instructions for team members on how to enter time into the timesheet can be found in our **GitLab Non-Exempt & Time and Attendance Training for Team Members**. **LINK to LevelUp TBA**
+Time cards are important business documents and they must be accurate. Accurate time records help ensure that:
 
-All timesheets should be completed by the deadlines listed in the [US Bi-Weekly Pay Schedule](https://docs.google.com/spreadsheets/d/15O3DAOXE2ENVHL4e9QSGulALDQ0tPT-FO4x9z1GufFU/edit?usp=sharing). Generally, timesheets must be submitted by team members at the latest by **9am Eastern** and approved by the manager by **Noon Eastern** on the Monday *following* the end of a pay period. In the event that such a day falls on a holiday, timesheets must be submitted by team members at the latest by **9am Eastern** and approved by their manager by **Noon Eastern** on the Tuesday *after* the holiday. 
+* GitLab pays their team members properly
+* GitLab can make informed decisions about staffing levels
+
+Team members are expected to follow the following **three directions** related to time cards:
+
+### Record Work Time Each Day
+
+**All time worked and time off should be recorded daily and promptly in your timesheet in ADP Essential Time & Attendance**. Instructions for team members on how to enter time into the timesheet can be found in our **GitLab Time and Attendance Training for Team Members**. **LINK to LevelUp TBA**
+
+### Review Time Cards
+
+Team members must review their time records for each pay period before submitting them to ensure they are accurate.
+
+### Submit Time Cards
+
+When team members submit their time cards, they are certifying the record is accurate and complete. All timesheets should be completed by the deadlines listed in the [US Bi-Weekly Pay Schedule](https://docs.google.com/spreadsheets/d/15O3DAOXE2ENVHL4e9QSGulALDQ0tPT-FO4x9z1GufFU/edit?usp=sharing). Generally, timesheets must be submitted by team members at the latest by **9am Eastern** and approved by the manager by **Noon Eastern** on the Monday *following* the end of a pay period. In the event that such a day falls on a holiday, timesheets must be submitted by team members at the latest by **9am Eastern** and approved by their manager by **Noon Eastern** on the Tuesday *after* the holiday. 
 
 At the due date and time, all timesheets will be locked for payroll processing, and no further changes will be accepted. Any corrections needed after the due date and time should be promptly reported to Payroll by sending an email to `uspayroll@gitlab.com`. Review additional questions in our [Frequently Asked Questions](/handbook/finance/timekeeping/frequently-asked-questions/) page.
 
+## Time Card Misconduct
+
+Examples of timecard-related team member misconduct that can lead to corrective action include but are not limited to:
+ 
+* Submitting an inaccurate or incomplete time record
+* Failing to submit a time record as required
+* Asking an unauthorized team member to change or add to their time record
+* Misrepresenting information about hours worked
+
 ## Timecard Approval by Managers
 
-As a manager, it is your responsibility to approve timecards. Failure to do so can result in disciplinary action. Additionally, managers can be individually liable should an employee claim they have not been paid properly.Please review our instructions on how to access ADP Essential Time & Attendance and how to approve timesheets by completing our **GitLab Non-Exempt & Time and Attendance Training for Managers**. **LINK to LevelUp TBA** 
+As a manager, it is your responsibility to approve timecards. Failure to do so can result in disciplinary action. Additionally, managers can be individually liable should an employee claim they have not been paid properly. Please review our instructions on how to approve timesheets by completing our **GitLab Time and Attendance Training for Managers**. **LINK to LevelUp TBA** 
+
+For any manager-related support and guidance, please reach out to your relevant [People Business Partner](/handbook/people-group/#people-business-partner-alignment-to-division).
 
 ## Pay Schedule
 
@@ -168,7 +195,7 @@ Pay for non-exempt team members in the US is calculated 6 days in arrears to all
 
 ## ADP Mobile Solutions
 
-Team members are recommended to also download the ADP Mobile Solutions app through the [Google Play app store](https://play.google.com/store/apps/details?id=com.adpmobile.android) or [Apple app store](https://apps.apple.com/us/app/adp-mobile-solutions/id444553167). **Please ensure that you have set up your [mobile Okta app](https://about.gitlab.com/handbook/business-technology/okta/) first**. To set up your ADP app, please follow these instructions:
+For non-exempt team members, it may be more efficient to log your hours using the mobile app as opposed to the desktop version of ADP. Team members are recommended to download the ADP Mobile Solutions app through the [Google Play app store](https://play.google.com/store/apps/details?id=com.adpmobile.android) or [Apple app store](https://apps.apple.com/us/app/adp-mobile-solutions/id444553167). **Please ensure that you have set up your [mobile Okta app](https://about.gitlab.com/handbook/business-technology/okta/) first**. To set up your ADP app, please follow these instructions:
   - When you open the ADP app for the first time, select `New? Get Started`.
   - Select `No` for Registration Code.
   - Select `USA`.
