Rename Protect to Govern in Career Development

--- a/career-development/matrix/engineering/quality/index.html.md.erb
+++ b/career-development/matrix/engineering/quality/index.html.md.erb
@@ -22,11 +22,11 @@ Here is a [flowchart representation](https://about.gitlab.com/handbook/engineeri
 
 * Dev
 * Ops
-* Secure
+* Secure & Govern
 * Enablement
 * Growth
 * Fulfillment
-* Protect
+* Data Science
 
 #### Career Framework
 
