Update Fulfillment MR guidelines to reflect that one approval is possible

--- a/development/fulfillment/index.html.md.erb
+++ b/development/fulfillment/index.html.md.erb
@@ -316,9 +316,9 @@ In summary,
 
 ### Approving and merging the work
 
-We have approval rules enabled, so every MR that targets `staging` or `master` needs at least one approval (different from the author/committer).
+We have approval rules enabled in CustomersDot, so every MR that targets `main` needs at least one approval (different from the author/committer).
 MRs require the following:
-- at least 2 different reviewers (typical)
+- at least 2 different reviewers (typical, but one reviewer is allowed for trivial MRs, such as a small dependency update or a test fix)
 - at least 1 approval
 - a maintainer's review and merge
 
@@ -332,7 +332,7 @@ In addition to the approval rules, MRs may require additional reviews as suggest
 
 ### Weekly async issue updates
 
-Every Friday, each engineer is expected to provide a quick async issue update by commenting on their assigned issues using the following template:
+Every week, each engineer is expected to provide a quick async issue update by commenting on their assigned issues using the following template:
 
 ```
 <!---
