Apply 1 suggestion(s) to 1 file(s)

--- a/people-group/learning-and-development/mentor/index.html.md.erb
+++ b/people-group/learning-and-development/mentor/index.html.md.erb
@@ -135,7 +135,7 @@ Mentees should set a foundational goal and purpose for their mentorship. **Mente
 | Measurable | How will success be measured? |
 | Personal | Why does achieving the goal matter? Tie goal to purpose. |
 
-Using the matrix below, fill in each empy space based on the descriptions above to draft your goal:
+Using the matrix below, fill in each empty space based on the descriptions above to draft your goal:
 
 | Time-bound | Certain | Specific | Positive | Measurable | Personal |
 | ---------- | ------- | -------- | -------- | ---------- | -------- | 
