Changing Title for page

--- a/people-group/workday/tech-stack-guide-workday/index.html.md.erb
+++ b/people-group/workday/tech-stack-guide-workday/index.html.md.erb
@@ -1,6 +1,6 @@
 ---
 layout: handbook-page-toc
-title: "Workday Tech Stack Guide"
+title: "People Group Tech Stack Guide"
 description: "Reference for how Workday is implemented."
 ---
 
@@ -15,7 +15,7 @@ description: "Reference for how Workday is implemented."
 {:toc .hidden-md .hidden-lg}
 
 
-## Workday Tech Stack Guide
+## People Group Tech Stack Guide
 
 > **Note:** Refer to the **[Tech Stack Index](/handbook/business-technology/tech-stack/)** to browse Apps and **[Tech Stack Applications](/handbook/business-technology/tech-stack-applications/)** to manage Apps.
 
