Update Workday Tech Stack Guide

--- a/people-group/workday/tech-stack-guide-workday/index.html.md.erb
+++ b/people-group/workday/tech-stack-guide-workday/index.html.md.erb
@@ -114,4 +114,4 @@ graph LR
 
 ### Key Reports / Dashboards
 
-TBD
+[People Analytics Hub](https://app.periscopedata.com/app/gitlab/1052689/Product-Analytics-Hub) - This is a location on Sisense that groups all the dashboards that exist around People Data.
