--- a/people-group/people-success-performance-indicators/index.html.md.erb
+++ b/people-group/people-success-performance-indicators/index.html.md.erb
@@ -10,4 +10,9 @@ description: "GitLab's People Success Department Performance Indicators."
 - TOC
 {:toc .hidden-md .hidden-lg}
 
+## Key Review
+The metrics on this page are currently being re-organized according to what the People Group reports out every [Key Review](https://about.gitlab.com/handbook/key-review/) meeting and [Group Conversation](https://about.gitlab.com/handbook/group-conversations/). Below is a link to the most recent `Group Conversation` deck for Team Members to access in the interim. 
+
+[People Group Conversation Deck](https://docs.google.com/presentation/d/1VJzXCDN1ddTvkzCC6L5BqCTmm_5y8tZt4fsTXd2s9gI/edit#slide=id.g11cac4c9cb6_1_204)
+
 <%= performance_indicators('People Success') %>
