Fix Product Planning stable counterparts

--- a/development/dev/plan/product-planning/index.html.md.erb
+++ b/development/dev/plan/product-planning/index.html.md.erb
@@ -26,7 +26,7 @@ For more details about the vision for this area of the product, see the
 
 ### Stable counterparts
 
-<%= stable_counterparts(role_regexp: /[,&] (Plan(?!:)|Plan:Product Planning)/, direct_manager_role: 'Interim Engineering Manager, Plan:Product Planning') %>
+<%= stable_counterparts(role_regexp: /[,&] (Plan(?!:)|Plan:Product Planning)/, direct_manager_role: 'Fullstack Engineering Manager, Plan:Product Planning') %>
 
 ### Hiring chart
 
