Adding Scalability and Delivery Leadership escalation information

--- a/infrastructure/team/scalability/index.html.md.erb
+++ b/infrastructure/team/scalability/index.html.md.erb
@@ -188,6 +188,14 @@ Simply put:
 
 ## Working with us
 
+### Emergency Escalation during S1/S2 incidents
+
+Scalability leadership can be reached via PagerDuty [Scalability Escalation](https://gitlab.pagerduty.com/escalation_policies#PDJ160O).
+
+From <a href="https://gitlab.pagerduty.com/incidents">https://gitlab.pagerduty.com/incidents</a>, click on the "New Incident" button and complete the new incident form as shown below. 
+
+![Scalability PD Incident](img/pd-scalability-incident.png) 
+
 ### How do I engage with the Scalability Group?
 
 1. Start with an issue in the Scalability tracker: [Create an issue](https://gitlab.com/gitlab-com/gl-infra/scalability/issues/new).
