Update Source Code page with UX workflow and boards

--- a/development/dev/create/source-code-be/index.html.md.erb
+++ b/development/dev/create/source-code-be/index.html.md.erb
@@ -69,6 +69,8 @@ Weekly calls between the Product Manager and Engineering Managers (frontend and 
 #### Issue refinement
 
 1. Once we have validated the problem, product, UX, and engineering will collaborate to propose a solution and decide on what's technically feasible. The proposed solution will be shared with users to validate it solves the problem.
+    1. Issues that require design work are marked with `UX` and `workflow::ready for design`.
+    1. Once designs are ready and the proposed solution is viable then the label `workflow::planning breakdown` will be applied.
 1. Once we have confirmed the proposed solution is viable, we will move to break it down as much as possible. When issues are ready for this stage, PM will mark issues with `workflow::refinement` label to signal next step.
 1. EM will work with engineers to decide distribution of work and assign issues for breakdown.
 1. Engineers or EM will evaluate the issue, work with PM, UX, and other engineering counterparts where necessary to address questions and concerns.
@@ -133,6 +135,11 @@ Create Source Code BE planning takes inputs from the following sources:
 - [Missed SLO Board](https://gitlab.com/gitlab-org/gitlab/-/issues?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=group%3A%3Asource%20code&label_name[]=missed-SLO&label_name[]=backend)
 - Bugs
 - New features
+
+Create Source Code UX planning takes inputs from the following sources:
+
+- [SCM UX Planning Board](https://gitlab.com/groups/gitlab-org/-/boards/5092292?label_name[]=UX&label_name[]=group%3A%3Asource%20code)
+- [SCM UX Build Board](https://gitlab.com/groups/gitlab-org/-/boards/5092276?label_name[]=UX&label_name[]=group%3A%3Asource%20code)
 
 ##### Planning Issue
 
