Add Analytics section to Ops section QE page

--- a/quality/quality-engineering/ops-analytics-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/ops-analytics-qe-team/index.html.md.erb
@@ -1,7 +1,7 @@
 ---
 layout: handbook-page-toc
-title: "Ops Quality Engineering team"
-description: "Quality Engineering team for the Ops Section"
+title: "Ops & Analytics Quality Engineering team"
+description: "Quality Engineering team for the Ops & Analytics Sections"
 ---
 
 ## On this page
@@ -12,15 +12,15 @@ description: "Quality Engineering team for the Ops Section"
 
 ## Team Handles
 
-| **GitLab Team Handle** | [`@gl-quality/ops-qe`](https://gitlab.com/gl-quality/ops-qe) |
-| **Slack Channel** | [#g_qe_ops](https://gitlab.slack.com/archives/CUGNRS97V) |
+| **GitLab Team Handle** | [`@gl-quality/ops-analytics-qe`](https://gitlab.com/gl-quality/ops-qe) |
+| **Slack Channel** | [#g_qe_ops_analytics](https://gitlab.slack.com/archives/CUGNRS97V) |
 | **Slack Handle** | `@ops-qe-team` |
 | **Team Boards** | [Team Board](https://gitlab.com/groups/gitlab-org/-/boards/978348) |
-| **Issue Tracker** | [quality/team-tasks](https://gitlab.com/gitlab-org/quality/team-tasks/issues/) |
+| **Issue Tracker** | [quality/team-tasks](https://gitlab.com/gitlab-org/quality/quality-engineering/team-tasks/-/issues)
 
 ## Team members
 
-<%= direct_team(manager_role: 'Quality Engineering Manager, Ops') %>Engineers in this team are embedded in the [Ops section].
+<%= direct_team(manager_role: 'Manager, Quality Engineering, Ops & Analytics') %>Engineers in this team are embedded in the [Ops section] and [Analytics section].
 
 ## OKRs
 
@@ -44,4 +44,6 @@ Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/
 [Monitor stage]: /handbook/product/categories/#monitor-stage
 [Verify stage]: /handbook/product/categories/#verify-stage
 [Release stage]: /handbook/product/categories/#release-stage
-[Package stage]: /handbook/product/categories/#create-stage
+[Package stage]: /handbook/product/categories/#package-stage
+[Analytics section]: /handbook/product/categories/#analytics-section
+[Analytics stage]: /handbook/product/categories/#analytics-stage
