Add Leadership PI Monthly to product handbook

--- a/product/product-processes/index.html.md.erb
+++ b/product/product-processes/index.html.md.erb
@@ -112,8 +112,31 @@ Non-public items for discussion should be added directly to the [agenda document
 - All Sections  will leverage and personalize this [template](https://gitlab.com/gitlab-com/Product/-/blob/main/.gitlab/issue_templates/section-PI-review-monthly-template.md)
 - All Sections will leverage and personalize this [agenda template](https://docs.google.com/document/d/1hKGU8hN_SpudlV-SnCu821EmMwgLVppJsXZmY4Gom4A/edit). 
 
+#### Leadership Performance Indicator Review (Monthly)
+**DRIs:** [Senior Director, Product Monetization](https://about.gitlab.com/company/team/#justinfarris) and [EBA to CProdO](https://about.gitlab.com/company/team/#gschwam)
+- **What:** A monthly meeting to provide an opportunity for the CProdO and R&D leadership to review a rollup of the [monthly Section performance indicators](#section-performance-indicator-review-monthly).
+- **When:** During the second week of every month 
+- **Duration:** 50 minutes
+- **Format:** The meeting is lead by the Senior Director of Product Monetization
+     - Discussion of watchpoints from any individual Section PI reviews (example: "Create SMAU down 5% quarter over quarter, discuss trend and action items" OR "group::purchase has been over SLA on past due infradev issues, discuss plan to remediate") 
+     - Core product-wide metrics review (CMAU, etc)
+     - Items CProdO wants to deep dive on for the month
+- **Recordings:** Each meeting will be recorded, and published so participants can engage async. The meetings have [REC] in the title and will automatically go to the [Google Drive Folder](https://drive.google.com/drive/search?q=type:video%20Performance%20Indicator). If you cannot find a recording, please message the EBA to the CProdO.
+- **Preparation:** 
+- Sr Director of Product Monetization & Operations will prepare a summary view of each section review as individual agenda items in the shared agenda doc
+- Sr Director of Product Monetization & Operations will callout any watchpoints for each section and update the agenda with appropriate links to dashboards or reports
+- Once ready EBA to CProdO will inform CProdO agenda is ready for pre-read
+- **Meeting Attendees** 
+- The following participants will be included in the sync meeting from each group (attendance can be async):
+   1. CProdO
+   2. Members of Product Leadership Team (all direct reports of the CProdO)
+   3. VP of Development
+   4. VP of Quality
+   5. All Product Division Section leaders
+- All meetings  will leverage this [agenda template](https://docs.google.com/document/d/16aOTOEkkLyhGqkpxMcT-mfu2CtLhMmgJ7LV_mvicFes/edit#). 
+
 #### Product Direction Showcases 
-**DRI:** [Director, Verify & Package](https://about.gitlab.com/company/team/#jreporter) and [Product Operations](https://about.gitlab.com/company/team/#fseifoddini)
+**DRIs:** [Director, Verify & Package](https://about.gitlab.com/company/team/#jreporter) and [Product Operations](https://about.gitlab.com/company/team/#fseifoddini)
 
 - **What:** A monthly meeting for 4 stages to present 10-minutes on their direction as well as provide a deep dive or demo into a recent product delivery. 
 - **When:** Monthly, rotating between EMEA and NA Timezone 
