--- a/total-rewards/compensation/index.html.md.erb
+++ b/total-rewards/compensation/index.html.md.erb
@@ -203,24 +203,22 @@ When the interim/acting period ends, the following process should be followed to
 
 ### Paid in your local currency
 
-_GitLab will continue to use the rates set in December 2021 while continuing to monitor and analyze the volatility in exchange rates ahead of the next update in December 2022._
+The compensation calculator is updated in December and June using the point in time exchange rate according to [Oanda](https://www1.oanda.com/currency/converter/) as of the first of the month. We are using the point in time exchange rate due to significant lag when utilizing an average exchange rate.   
 
-The compensation calculator is updated in December and June using a 12-month average of the exchange rate. The 12-month average is taken using the exchange rate on the first of the month for the last 12 months according to [Oanda](https://www1.oanda.com/currency/converter/). We use the 12-month average as opposed to a point-in-time exchange rate in order to minimize volatility. If volatility is significant in the June review, we will continue to use the December rates until the next annual compensation review cycle. 
+Adjustments to existing team members' compensation who are paid in local currency are made **only during** the applicable [compensation review cycle](https://about.gitlab.com/handbook/total-rewards/compensation/compensation-review-cycle/).  We only adjust compensation during the review cycle since being paid in local currency means that your local purchasing power does not change.  
 
-Adjustments to existing team members' compensation who are paid in local currency are made as part of the applicable [compensation review cycle](/handbook/total-rewards/compensation/compensation-review-cycle/). This is because since you are paid in local currency, your local purchasing power does not change.
+Team members contracted through a PEO or IT BV may have the option to choose to be paid in USD or EUR when there is volatility in their local currency but only if the PEO (if applicable) and payroll can support it.  USD and/or EUR payment options are not available in all countries.
 
-Team members contracted through a PEO or IT BV may have the option to choose to be paid in USD or EUR if there is volatility in their local currency and their PEO (if applicable) and payroll can support paying in this currency. Both USD and EUR payment options may not be available in all countries. 
-* As Remote cannot adjust payment currency from HUF (Hungary) and there has been significant volatility, the exchange rate for HUF will be updated in the handbook effective September 1, 2022 and the new local currency amount will be reflected in team members paychecks as of this date. GitLab will continue to work with Remote to determine if the local currency can be adjusted from HUF to USD. 
-* For other PEO countries where we are not able to adjust local currency to USD or EUR, we will review on a case by case basis. 
+#### Exchange Rates for Bonus Processing
+
+All [one-time bonuses](https://about.gitlab.com/handbook/incentives/) including Discretionary, Retention, Referral, and Working Group Bonuses where the intended value is awarded in USD will be converted to local currency using the exchange rate effective the first of the month in which the bonus is awarded.
 
 ### Not paid in your local currency
 
-_Due to the current economic climate, we will not be applying salary fluctuations based on the 2022-06-01 local purchasing power review for those not paid in their local currency. We will continue to monitor the economic situation and review the impact to the team before reinstating this process._
+There are a number of reasons why team members may not be paid in local currency. For example, GitLab's bank might not support the currency or there may be a strong economic reason for the team member to choose a different currency. The currencies that GitLab can pay in are published on the [contracts](https://about.gitlab.com/handbook/contracts#available-currencies) page.
 
-There are a number of reasons why team members may not be paid in local currency. For example, GitLab's bank might not support the currency or there may be a strong economic reason for the team member to choose a different currency. The currencies that GitLab can pay in are published on the [contracts](/handbook/contracts#available-currencies) page.
-
-1. The Total Rewards Analyst will analyze the difference in exchange rates from December to June (or vice versa) and the effect this has on local purchasing power using the following process:
-    - The exchange rate between the team member's local currency and chosen currency will be collected for both the current and previous conversion effective date.
+1. The Total Rewards team will analyze the difference in exchange rates from December to June (or vice versa) and their effect on local purchasing power using the following process:
+    - The exchange rate between the team member's local currency and chosen currency will be compared for both the current and previous conversion effective date.
     - The percent change is calculated between the two rates: `(New Rate - Previous Rate)/Previous Rate`.
 1. Criteria for review, the team member:
     - Is not paid in local currency.
@@ -228,13 +226,15 @@ There are a number of reasons why team members may not be paid in local currency
     - Has not opted out.
 1. Only changes greater than +/- 5% will be processed in each review.
     - Changes must stay within band of the compensation calculator.
-1. Total Rewards Analysts will confirm by [letter of adjustment](/handbook/contracts/#letter-of-adjustment) any _increases or decreases_ to compensation as a result of this review.
+1. The Total Rewards team will work with People Connect to confirm by [letter of adjustment](https://about.gitlab.com/handbook/contracts/#letter-of-adjustment) any _increases or decreases_ to compensation as a result of this review.
 1. Any significant increases or decreases will be reviewed on a case-by-case basis before any changes are made.
 1. Team members may also [opt out](https://docs.google.com/document/d/1GMxFFMKL8ssEi8gPJzpc1xizSJHxrR2n0R5HSZn-G-g/edit?usp=sharing) of the reviews.
     - If an opt out agreement is signed, the team members will be excluded from any future Exchange Rate reviews. GitLab retains the right to revisit the opt-out status in the future.
 1. Additionally, if a team member is impacted outside of this review period they should reach out to total-rewards@domain.
 
-Example: A team member's local currency is the Russian Ruble (RUB) and they are paid in US Dollars (USD). They have not previously opted out and have been employed for greater than 6 months. The exchange rate effective 2020-12-01 is 0.013. If for 2021-06-01 the exchange rate increases to 0.014, then this would result in a percent increase of 7.69%. The team member would have the option to either accept this increase to their salary or opt out.
+Example: A team member's local currency is the Russian Ruble (RUB) and they are paid in US Dollars (USD). They have not previously opted out and have been employed for greater than 6 months. If the exchange rate effective 2023-06-01 is 0.013 and for 2023-12-01, the exchange rate increases to 0.014, then this would result in a percent increase of 7.69%. The team member would have the option to either accept this increase to their salary or opt out of all salary fluctuations based on this review during their time at GitLab.  Any changes to salaries based on this review will be made during the Annual Compensation Review cycle.  
+
+_Due to the current economic climate, we will not be applying negative salary fluctuations based on the 2022-12-01 local purchasing power review for those not paid in their local currency. We will continue to monitor the economic situation and review the impact to the team as well as global currency volatility before reconciling missed reviews and reinstating the full process._
 
 ## Hourly Employees
 
