Update Terraform Provider Url

--- a/development/ops/configure/index.html.md.erb
+++ b/development/ops/configure/index.html.md.erb
@@ -125,7 +125,7 @@ Some dedicated Slack channels:
 
 * Agent for Kubernetes: [`f_agent_for_kubernetes`](https://gitlab.slack.com/archives/f_agent_for_kubernetes)
 * Terraform backend: [`f_terraform_backend`](https://gitlab.slack.com/archives/f_terraform_backend)
-* [Terraform provider](https://github.com/gitlabhq/terraform-provider-gitlab): [`terraform-provider`](https://gitlab.slack.com/archives/terraform-provider)
+* [Terraform provider](https://gitlab.com/gitlab-org/terraform-provider-gitlab): [`terraform-provider`](https://gitlab.slack.com/archives/terraform-provider)
 * Auto DevOps: [`f_autodevops`](https://gitlab.slack.com/archives/f_autodevops)
 * Alerts: [`feed_alerts_configure`](https://gitlab.slack.com/archives/feed_alerts_configure)
 
