Add Virgin Media O2 and Deloitte future of work leads

--- a/culture/all-remote/head-of-remote/index.html.md.erb
+++ b/culture/all-remote/head-of-remote/index.html.md.erb
@@ -131,8 +131,10 @@ Multitudes of firms are hiring for this role without formally posting a job desc
 1. Modern Health: [Workplace Experience Manager](https://www.linkedin.com/in/dominiccordon/)
 1. ADP: [Principal, Future of Work](https://www.linkedin.com/in/gmota/)
 1. SAP: [SVP & Chief Future of Work](https://twitter.com/Schmeichel_C)
-1. Deloitte: [Global Future of Work Leader](https://twitter.com/sthatfield)
+1. Deloitte: [Global Future of Work Leader](https://twitter.com/sthatfield) and [Future of Wellbeing Lead](https://www.linkedin.com/in/ryanhopkinsuk/)
 1. The Recycling Partnership: [Director of Organizational Effectiveness](https://www.linkedin.com/in/tannenbaum/)
+1. Virgin Media O2: [Head of Future Work and Workplace](https://www.linkedin.com/posts/markus-urban_newjob-workplacestrategy-futureofwork-activity-7010268893533327361-MVUL?utm_source=share&utm_medium=member_desktop)
+
 
 
 ### What function or department does a Head of Remote sit in?
