Added new showcase format

--- a/development/ops/index.html.md.erb
+++ b/development/ops/index.html.md.erb
@@ -67,15 +67,23 @@ GitLab encourages transparency by default, and when meetings are recorded, they 
 
 ### Ops Engineering Showcase
 
-Each month there are two showcase sessions organized for both APAC and AMER/EMEA timezones. These sessions are organized as opportunities for engineers to show off the things they've been working on. These sessions are each organized via a planning issue linked in the epic below. Sessions are recorded and uploaded to YouTube as well.
+Starting in 2023 in FY24-Q1, a fresh new format for this showcase will include the recording and sharing of videos that team members have created.  Once a video has been created and added to Google [doc](https://docs.google.com/document/d/1eeyahWYH78vjmc900rdVQ8cJK6ehi4OGnyILDDmLU4k/edit#bookmark=id.r5ekcxbvslty), based on the amount of questions being asked, an AMA may be set up to discuss further in a group setting.
+Like before, these videos are intended to be opportunities for engineers to show off the things they've been working on.
 
 [Ops Engineering Showcase Epic](https://gitlab.com/groups/gitlab-com/-/epics/1157)
 
-#### Recordings 
+#### Quarterly Recordings 
+
+| Year | Quarter | Links |
+| ------ | ------ | ------ |
+| 2023 | FY24-Q1 | [Videos](https://docs.google.com/document/d/1eeyahWYH78vjmc900rdVQ8cJK6ehi4OGnyILDDmLU4k/edit#bookmark=id.r5ekcxbvslty)  |
+
+#### Monthly Recordings 
 
 | Year | Month | AMEA | APAC | Async videos |
 | ------ | ------ | ------ | ------ | ------ |
-| 2022 | November |  |  |  |
+| 2022 | December | No showcases | No showcases |  |
+| 2022 | November | No showcases | No showcases |  |
 | 2022 | October | [Split GitLab Monolith into components](https://www.youtube.com/watch?v=cODM0xHqL28) | No showcases | [TaskScaler 101](https://www.youtube.com/watch?v=GU81g2oOtAQ) |
 | 2022 | September | [Import packages with a CI pipeline](https://youtu.be/mk7gHFtUXpE)  | No showcases  |  |
 | 2022 | August | No showcases | Async video -> | [Leader election in GitLab Agent for Kubernetes](https://youtu.be/Gz8NJJ2WFrE) | 
